dropshot/tests/fail/bad_endpoint18.stderr
error[E0277]: the trait bound `TypedBody<Stuff>: SharedExtractor` is not satisfied
  --> tests/fail/bad_endpoint18.rs:27:14
   |
27 |     _param1: TypedBody<Stuff>,
   |              ^^^^^^^^^^^^^^^^ the trait `SharedExtractor` is not implemented for `TypedBody<Stuff>`
   |
help: the following other types implement trait `SharedExtractor`
   |
  ::: src/extractor/path.rs
   |
   | / impl<PathType> SharedExtractor for Path<PathType>
   | | where
   | |     PathType: DeserializeOwned + JsonSchema + Send + Sync + 'static,
   | |____________________________________________________________________^ `dropshot::Path<PathType>`
  --> src/extractor/query.rs
   |
   | / impl<QueryType> SharedExtractor for Query<QueryType>
   | | where
   | |     QueryType: JsonSchema + DeserializeOwned + Send + Sync + 'static,
   | |_____________________________________________________________________^ `dropshot::Query<QueryType>`
   |
  ::: src/extractor/header.rs
   |
   | / impl<HeaderType> SharedExtractor for Header<HeaderType>
   | | where
   | |     HeaderType: JsonSchema + DeserializeOwned + Send + Sync + 'static,
   | |______________________________________________________________________^ `dropshot::Header<HeaderType>`
note: required by a bound in `need_shared_extractor`
  --> tests/fail/bad_endpoint18.rs:21:1
   |
21 | / #[endpoint {
22 | |     method = GET,
23 | |     path = "/test",
24 | | }]
   | |__^ required by this bound in `need_shared_extractor`
...
27 |       _param1: TypedBody<Stuff>,
   |                --------- required by a bound in this function
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>, TypedBody<Stuff>, dropshot::Query<Stuff>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<exclusive_extractor_not_last> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::exclusive_extractor_not_last}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint18.rs:25:10
   |
21 | / #[endpoint {
22 | |     method = GET,
23 | |     path = "/test",
24 | | }]
   | |__- required by a bound introduced by this call
25 |   async fn exclusive_extractor_not_last(
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>, TypedBody<Stuff>, dropshot::Query<Stuff>) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<exclusive_extractor_not_last> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::exclusive_extractor_not_last}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
